--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "server-lupus-diagnosis",
+    "name": "lupus-diagnosis--backend",
     "builds": [{
         "src": "build/index.js",
         "use": "@now/node-server"
