--- a/now.json
+++ b/now.json
@@ -1,6 +1,11 @@
 {
     "version": 2,
     "name": "lupus-diagnosis--backend",
+    "build": {
+        "env": {
+            "NODE_PATH": "./"
+        }
+    },
     "builds": [{
         "src": "index.ts",
         "use": "@now/node-server"
