--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,18 +40,15 @@
 
     /* Module Resolution Options */
     "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
+    "baseUrl": ".",                       /* Base directory to resolve non-absolute module names. */
     "paths": {
-      "*": [
-        "*",
-        "app/*",
-        "configs/*",
-        "routes/*",
-        "database/*",
-        "datasets/*",
-        "public/*",
-        "storage/*"
-      ]
+      "app": ["./app"],
+      "configs": ["./configs"],
+      "database": ["./database"],
+      "datasets": ["./datasets"],
+      "public": ["./public"],
+      "routes": ["./routes"],
+      "storage": ["./storage"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
