--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "NODE_PATH=./build node build/index.js"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/compression": "1.0.1",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.2",
@@ -23,12 +24,14 @@
     "typescript": "3.7.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "1.7.4",
     "cors": "2.8.5",
-    "csv-parser": "^2.3.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "fast-csv": "^4.3.1",
     "helmet": "3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "1.9.1"
   }
 }
