--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.32",
     "@types/compression": "1.0.1",
     "@types/cors": "2.8.6",
     "@types/express": "4.17.2",
     "@types/helmet": "0.0.45",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "1.7.37",
+    "@types/node": "^14.0.20",
+    "@types/validator": "^13.1.0",
     "nodemon": "2.0.2",
     "ts-node": "8.5.4",
     "typescript": "3.7.4"
@@ -31,7 +35,9 @@
     "express": "4.17.1",
     "fast-csv": "^4.3.1",
     "helmet": "3.21.2",
+    "json-2-csv": "^3.7.6",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "1.9.1"
+    "morgan": "1.9.1",
+    "sequelize": "^6.3.1"
   }
 }
